# rmcs_dart_guidance

./: CMakeLists.txt  README.md  base_action_and_task.md  package.xml  plugins.xml  requirements.md  test_requirement.md  vision_requirement.md
src/manager/: TODOLIST.md  command.cpp  dart_manager.cpp  dart_manager_v2.cpp  feedback_data.cpp  gui_bridge_json_utils.hpp  gui_bridge_runtime.hpp  host_bridge_runtime.hpp  manager_for_filling_test.cpp  manager_types.hpp  web_command_bridge.cpp
src/manager/action/: action.hpp  action_sequence.hpp  action_set.hpp  belt_move_action.hpp  delay_action.hpp  filling_action.hpp  filling_lift_action.hpp  filling_limit_servo_action.hpp  lifting_lk_action.hpp  lifting_motor_action.hpp  manual_angle_control.hpp  manual_force_control.hpp  trigger_control_action.hpp  trigger_lock_action.hpp
src/manager/core/: dart_manager.cpp
src/manager/core/components/: dart_manager.cpp  dart_manager_bridge_io.hpp  external_command_manager.cpp  gui_bridge_command_port.cpp  gui_bridge_command_port.hpp  gui_bridge_endpoint.cpp  gui_bridge_ports.hpp  gui_bridge_state_port.cpp  gui_bridge_state_port.hpp  host_bridge_endpoint.cpp  host_bridge_ports.hpp  manager_command_mux.cpp  remote_command_bridge.cpp
src/manager/core/runtime/: action.hpp  action_sequence.hpp  action_set.hpp  task.hpp
src/manager/external_control/: dart_manager_bridge_io.hpp  host_bridge.cpp  remote_command_bridge.cpp
src/manager/resources/: task_factory.cpp  task_factory.hpp  vision_aim_profile_provider.hpp
src/manager/resources/actions/: belt_control_action.hpp  belt_move_action.hpp  delay_action.hpp  filling_lift_action.hpp  filling_limit_servo_action.hpp  force_control_action.hpp  host_manual_control_action.hpp  manual_angle_control_action.hpp  manual_control_action.hpp  manual_force_control_action.hpp  trigger_control_action.hpp  vision_aim_action.hpp
src/manager/resources/tasks/: cancel_launch_task.hpp  filling_lift_task.hpp  fire_and_preload_task.hpp  host_manual_control_task.hpp  launch_preparation_task.hpp  launch_preparation_with_vision_task.hpp  manual_control_task.hpp  slider_init_task.hpp  trigger_control_task.hpp
src/manager/task/: cancel_launch_task.hpp  cancel_launch_task2.hpp  filling_test_task.hpp  fire_and_preload_task.hpp  fire_task.hpp  fire_task2.hpp  launch_preparation_task.hpp  launch_preparation_task2.hpp  silder_init_task.hpp  task.hpp
src/vision/: TODOLIST.md  dart_vision_core.cpp  identifier.hpp  image_recorder.hpp  tracker.hpp
test/: TODOLIST.md  image_display_node.cpp
test/manager/sim/: dart_manager_sim_command_bridge.cpp  dart_manager_sim_feedback_bridge.cpp  dart_manager_sim_node.cpp  dart_sim_bus.hpp  dart_sim_core.cpp  dart_sim_core.hpp
webUI/: index.html  serve.py
